# PrivateVoiceToText

./: .gitignore  =1.0  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/.obsidian/: workspace.json
docs/Guides/CSharp_Developer/: ProcessFlow.md  info.md
docs/Guides/CSharp_Developer/Plans/: ImplementationPlan.md
docs/Misc/: ImplementationResearch.md
docs/Plans/Archive/: ImplementationPlan_Claude.md
src/pvtt/: __init__.py  __main__.py  exceptions.py
src/pvtt/audio/: capture.py  file_reader.py  preprocessing.py  vad.py
src/pvtt/cli/: app.py  config_cmd.py  doctor.py  formatters.py  model.py  transcribe.py
src/pvtt/config/: loader.py  paths.py  schema.py
src/pvtt/core/: batch.py  model_manager.py  streaming.py  transcriber.py
src/pvtt/engine/: base.py  faster_whisper.py  registry.py
src/pvtt/export/: base.py  json_export.py  plain_text.py  registry.py  srt.py  vtt.py
src/pvtt/util/: hardware.py  logging.py  types.py
tests/: conftest.py
tests/integration/: test_cli_live.py  test_live_transcription.py
tests/media/: consolidated.rpp
tests/media/Backups/: consolidated-2026-02-08_155731.rpp-bak
tests/media/peaks/: 01-consolidated.wav.reapeaks
tests/unit/: test_capture.py  test_cli_app.py  test_config_set.py  test_doctor.py  test_engine_base.py  test_engine_registry.py  test_exceptions.py  test_export_registry.py  test_file_reader.py  test_hardware.py  test_json_export.py  test_loader.py  test_logging.py  test_model_manager.py  test_paths.py  test_plain_text.py  test_preprocessing.py  test_schema.py  test_srt.py  test_streaming.py  test_transcriber.py  test_types.py  test_vad.py  test_vtt.py
